PyMaker/datas/object2/RawHTML/i701/Python_DOC_referPages.colon-operator-causes-issue-with-python-3-4-ubuntu-14-04.txt
<div class="post-text" itemprop="text">
<p>My Python code is successfully working with Python 3.6 on Ubuntu 18.04. However, it gives  the following syntax error when I moved to the Ubuntu 14.04&amp; Python 3.4:</p>
<pre><code>        line 123
        self.__last_packet: Packet = None
                  ^
    SyntaxError: invalid syntax
</code></pre>
<p>Did something changed between Python3.4 and  3.6? I also want to know the meaning of the colon(:) operator for such a case. I added 'if' at the front of the problematic line, and seems that syntax issue was solved, but I don't think that author of the code meant an 'if' statement there. </p>
<p>By the way, the line was taken from the constructor part of a Python class.</p>
</div>
<div class="post-text" itemprop="text">
<p>Type hinting come up with Python 3.5 (please see <a href="https://docs.python.org/3/whatsnew/3.5.html" rel="nofollow noreferrer">Python 3.5 changelog</a>).
So, yes you have to remove the <code>: Packet</code> stuff.</p>
</div>
<span class="comment-copy">It's hard to tell what may have gone wrong without looking at the code and the Full Traceback error.</span>
<span class="comment-copy">Note, the colon is not an operator, it is part of the type-hinting syntax, which didn't exist until 3.5</span>
<span class="comment-copy">or just upgrade to at least python 3.5 ;)</span>
